# urd

./: .gitignore  CLAUDE.md  CONFIG_MANAGER_DESIGN.md  Cargo.toml  README.md  install-binary.sh
.github/workflows/: ci.yml  release.yml
demo/: .gitignore  topologies.yaml
demo-import/: .gitignore  basics.env  database.yaml  production.env  vendor-keys.env
demo-import/.urd/: demo.key  key-id  store.yaml
demo/.urd/: store.yaml
demo/api/: .env.template  env.manifest.yaml
demo/web/: env.manifest.yaml
demo/worker/: env.manifest.yaml
src/: cli.rs  main.rs  paths.rs
src/assembly/: commands.rs  filters.rs  mod.rs  types.rs
src/catalog/: commands.rs  mod.rs  types.rs
src/config/: commands.rs
src/crypto/: commands.rs  encrypt.rs  mod.rs
src/import/: commands.rs
src/init/: commands.rs
src/store/: commands.rs  mod.rs  paths.rs  types.rs
src/tui/: app.rs  input.rs  mod.rs  ui.rs
tests/: integration.rs
vhs/: assemble.tape  cli.tape  init.tape  tui.tape
